re PR tree-optimization/26213 (new (within last few days) infinite loop with -O1)

PR tree-optimization/26213
	* tree-ssa-threadedge.c (simplify_control_stmt_condition): Do not
	loop trying to follow SSA_NAME_VALUE chains.

	* gcc.c-torture/compile/pr26213.c: New test.

From-SVN: r110846